<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.simbo1905.json</groupId>
        <artifactId>parent</artifactId>
        <version>0.1.9</version>
    </parent>

    <artifactId>java.util.json.schema</artifactId>
    <packaging>jar</packaging>
    <name>java.util.json Java21 Backport Schema Validator</name>
    <url>https://simbo1905.github.io/java.util.json.Java21/</url>
    <scm>
        <connection>scm:git:https://github.com/simbo1905/java.util.json.Java21.git</connection>
        <developerConnection>scm:git:git@github.com:simbo1905/java.util.json.Java21.git</developerConnection>
        <url>https://github.com/simbo1905/java.util.json.Java21</url>
        <tag>HEAD</tag>
    </scm>
    <description>Experimental JSON Schema 2020-12 validator built using the java.util.json Java 21 backport; includes integration tests running the official JSON Schema Test Suite.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.simbo1905.json</groupId>
            <artifactId>java.util.json</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- JSON Schema Test Suite runner -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Integration-test / verify runner -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>**/*IT.java</include>
                        <include>**/*ITCase.java</include>
                    </includes>
                </configuration>
            </plugin>

            <!-- Download & unzip the official test-suite -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>fetch-json-schema-suite</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.directory}/json-schema-test-suite"/>
                                <get src="https://github.com/json-schema-org/JSON-Schema-Test-Suite/archive/refs/tags/23.1.0.zip"
                                     dest="${project.build.directory}/json-schema-test-suite.zip"
                                     skipexisting="true"/>
                                <unzip src="${project.build.directory}/json-schema-test-suite.zip"
                                       dest="${project.build.directory}/json-schema-test-suite"
                                       overwrite="false"/>
                                <!-- Rename the extracted directory for stable path -->
                                <move file="${project.build.directory}/json-schema-test-suite/JSON-Schema-Test-Suite-23.1.0"
                                      tofile="${project.build.directory}/json-schema-test-suite"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
